--- a/package.json
+++ b/package.json
@@ -11,11 +11,13 @@
     "start": "vite dev --open"
   },
   "dependencies": {
+    "axios": "^1.8.4",
     "react": "^19.1.0",
     "react-dom": "^19.1.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
+    "@types/axios": "^0.9.36",
     "@types/react": "^19.1.2",
     "@types/react-dom": "^19.1.2",
     "@vitejs/plugin-react": "^4.3.4",
