--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
   "dependencies": {
     "axios": "^1.8.4",
     "react": "^19.1.0",
-    "react-dom": "^19.1.0"
+    "react-dom": "^19.1.0",
+    "react-notifications-component": "^4.0.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
